Fix/test findings sprint 14 part 1 (#1572)
* fix: add input aliases

* fix: tailwind classes, comment out page size selector as we dont use it

* fix: make add member button semibold

* fix: website translation, rm link

* fix: make leaf color grey

* fix: color for esco areas

* fix: pdf download public assertion

* fix: missing translate pipe

* fix: wrong tailwind class

---------

Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -108,7 +108,12 @@
 		"emailAddress": "E-Mail-Adresse",
 		"tos": "Nutzungsbedingungen",
 		"change": "ändern",
-		"condition": "Bedingung"
+		"condition": "Bedingung",
+		"country": "Land",
+		"state": "Bundesland",
+		"overview": "Übersicht",
+		"rolesAndRights": "Rollen und Rechte",
+		"website": "Webseite"
 	},
 	"NavItems": {
 		"register": "Registrieren",
