Feat/redesign badge detail (#1569)
* feat: change styles and datalist in sidebar

* feat: styles, tab view

* feat: pagination and search for issuer detail datatable

* fix: rm unused variable

* refactor: format and remove unused code

* fix: oeb-backpack-tabs move

* fix: include search by email

* fix: styles

* feat: adjust color guide

* feat: fetch up to 500 badge instances per default

* feat: color adjustments

* fix: change border radius and simplify gray colors

---------

Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>
Co-authored-by: David Scheidt <scheidtdav@users.noreply.github.com>

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -97,6 +97,7 @@
 		"select": "Select",
 		"loadMore": "Load more",
 		"searchByEmail": "Search by email address",
+		"searchByNameOrEmail": "Search name or email",
 		"openNewWindow": "Open in new window",
 		"public": "Public",
 		"sendUsYourBadge": "Send your badge to <a class='tw-text-link tw-underline' href='mailto:support@openbadges.education'>support@openbadges.education</a> and we will be glad to take a look. ",
