--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1024,7 +1024,7 @@
 		"notActivatedYetStart": "The Micro Degree is not yet",
 		"notActivatedYetLink": "unlocked",
 		"notActivatedYetEnd": " for use.",
-		"finishedOn": "finished on",
+		"finishedOn": "Finished on",
 		"mdUsers": "Micro Degree users",
 		"searchMds": "search micro degrees",
 		"saving": "Saving",
