feat: add issuer contract info

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -371,7 +371,8 @@
 		"clickOnAwardBadges": "Klicke auf \"Badges vergeben\", um die Badges jetzt an deine Lernenden zu vergeben.",
 		"creatingBadge": "Erstelle Badge",
 		"memberView": "Mitglieds-Ansicht",
-		"partOfNetwork": "Teil vom Netzwerk"
+		"partOfNetwork": "Teil vom Netzwerk",
+		"contract26": "Mit einem Klick auf „Institution erstellen“ wird die <a class='tw-underline tw-text-link' target='_blank' href='https://oeb-cms.mycelia.education/wp-content/uploads/2025/09/Vereinbarung-ueber-die-gemeinsame-Verantwortlichkeit-GVV_Institution_082025.pdf'>hier abrufbare</a> Vereinbarung gemäß Artikel 26 Abs. 1 DSGVO über die gemeinsame datenschutzrechtliche Verantwortung der Institution mit den Verbundpartnerinnen wirksam."
 	},
 	"Network": {
 		"networksNav": "Netzwerke A-Z",
