--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -370,7 +370,8 @@
 		"clickOnAwardBadges": "Click on \"award badges\" to award the badges to your learners now.",
 		"creatingBadge": "Creating Badge",
 		"memberView": "Member view",
-		"partOfNetwork": "Part of the network"
+		"partOfNetwork": "Part of the network",
+		"contract26": "By clicking on “Create institution,” the agreement <a class='tw-underline tw-text-link' target='_blank' href='https://oeb-cms.mycelia.education/wp-content/uploads/2025/09/Vereinbarung-ueber-die-gemeinsame-Verantwortlichkeit-GVV_Institution_082025.pdf'>available here</a> pursuant to Article 26(1) GDPR on the joint data protection responsibility of the institution with its partners becomes effective."
 	},
 	"Network": {
 		"networksNav": "Networks A-Z",
