fix: wording, section styles

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -259,7 +259,7 @@
 		"myLearningPathText": "Learning paths are created as part of the Micro Degree badge type.",
 		"myInstitutionsNoBadge": "has no badges that it can award yet.",
 		"myInstitutionsCreateBadge": "Create new badge",
-		"myInstitutionsCreateLearningPath": "Create Micro Degree",
+		"myInstitutionsCreateLearningPath": "Create learning path",
 		"giveMyBadges": "Award my badges",
 		"askForPlugin": "Request plugin",
 		"askForPluginText": "Our <span class='tw-font-bold'>plugin</span> offers you the possibility to award badges from your own digital learning environment.",
@@ -323,9 +323,9 @@
 		"responsible": "...bear the responsibility for the quality of the course offerings, the created and awarded badges, as well as for the assigned skills.",
 		"noMisuse": "...will only use the platform for its intended purposes and reject any misuse.",
 		"institutionsHeadline": "All institutions at a glance",
-		"learningPathCreateHeadline": "Create Micro Degree",
-		"learningPathEditHeadline": "Edit Micro Degree",
-		"lpSubHeading": "A Micro Degree combines several badges into a larger learning unit.",
+		"learningPathCreateHeadline": "Learning path with Micro Degree",
+		"learningPathEditHeadline": "Edit learning path",
+		"lpSubHeading": "A learning path combines several badges into a larger learning unit.",
 		"loadingAllBadges": "Loading badges...",
 		"loadAllBadges": "Load all badges",
 		"waitWhileBadgesAreIssued": "Badges are being awarded, please wait...",
@@ -571,7 +571,7 @@
 		"addTags": "Add tags",
 		"newTag": "Enter a tag...",
 		"tagDoesNotExist": "This tag does not exist yet",
-		"tagInfo": "Tags help categorize badges and help learners on OEB search for badges on specific topics.",
+		"tagInfo": "Tags help categorize {{items}} and help learners on OEB search for {{items}} on specific topics.",
 		"removeAlignment": "Remove link",
 		"removeAlignmentInfo": "Are you sure you want to remove the link(s)? ",
 		"irreversibleAction": "This action cannot be undone.",
@@ -1016,6 +1016,7 @@
 	},
 	"LearningPath": {
 		"learningpaths": "Micro Degrees",
+		"learningpathsPlural": "learning paths",
 		"learningpathsNav": "Micro Degrees A-Z",
 		"catalogHeadline": "All Micro Degrees at a glance",
 		"participate": "Participate",
@@ -1033,7 +1034,6 @@
 		"getYourPath": "Get your Micro Degree badge",
 		"continue": "Continue learning",
 		"finished": "Finished",
-		"enterDetails": "Enter Micro Degree details",
 		"includedBadges": "Contained badges",
 		"badgeTabs": {
 			"all": "All",
@@ -1042,13 +1042,13 @@
 		},
 		"chooseBadges": "Choose included badges",
 		"badgeSequenceStep": "Badge order",
-		"badgeSequence": "Order of badges in the Micro Degree",
+		"badgeSequence": "Order of badges in the learning path",
 		"combineBadgeCategories": "You can combine competency badges and participation badges.",
-		"min2Badges": "The Micro Degree must contain at least 2 badges.",
+		"min2Badges": "The learning path must contain at least 2 badges.",
 		"chooseBadgesInfo": "It is best to only use badges from your own institution, as the Micro Degree will become inactive if one of the included badges is deleted. You will then have to find a replacement to reactivate the Micro Degree.",
 		"youHave": "You have",
 		"choosenForLp": "selected for the Micro Degree.",
-		"dragDropInfo": "You can use <span class='tw-font-bold'>drag & drop</span> to arrange your selected badges here in the order they should appear within the Micro Degree.",
+		"dragDropInfo": "You can use <span class='tw-font-bold'>drag & drop</span> to arrange your selected badges here in the order they should appear within the learning path.",
 		"lpParticipationBadge": "Micro Degree",
 		"lpParticipationBadgeInfo": "Learners can request the Micro Degree badge from you as soon as they have acquired all the badges included in the Micro Degree. <span class='tw-font-bold'>You will receive the requests by email</span>.",
 		"lpDerivedData": "We have adopted the following data for the Micro Degree:",
@@ -1061,13 +1061,12 @@
 		"selectedBadges": "You selected {{ count }} Badges for the Micro Degree",
 		"selectedBadgesOne": "You selected 1 Badge for the Micro Degree",
 		"deleteWarning": "Do you really want to delete this Micro Degree?",
-		"mdImage": "Micro degree image",
-		"lastBadgeInfo": "Learners automatically receive the <strong class='tw-text-purple'>Micro Degree</strong> badge by e-mail, as soon as they have earned all the badges it contains.",
-		"activateMd": "Unlock Micro Degree",
-		"activationInfo": "When you activate the Micro Degree for use, <span class='tw-font-bold'>you can no longer edit it afterwards</span>. ",
-		"activationInfo2": "At the same time, learners who already have the badges included in the learning pathway automatically receive the Micro Degree.",
-		"activateMdForUse": "<span class='tw-font-bold tw-text-white tw-text-lg'>Unlock Micro Degree for use</span>",
-		"notActivatedYetStart": "The Micro Degree is not yet",
+		"lastBadgeInfo": "Learners automatically receive the <strong class='tw-text-purple'>Micro Degree</strong> badge by e-mail, as soon as they have earned all badges in the learning path.",
+		"activateMd": "Unlock learning path",
+		"activationInfo": "When you activate the learning path for use, <span class='tw-font-bold'>you can no longer edit it afterwards</span>. ",
+		"activationInfo2": "At the same time, learners who already have the badges included in the learning pathway automatically receive the Micro Degree Badge.",
+		"activateMdForUse": "<span class='tw-font-bold tw-text-white tw-text-lg'>Unlock learning path for use</span>",
+		"notActivatedYetStart": "The learning path is not yet",
 		"notActivatedYetLink": "unlocked",
 		"notActivatedYetEnd": " for use.",
 		"finishedOn": "Finished on",
@@ -1080,10 +1079,11 @@
 		"learnersHaveTo2": "of the badges selected above in order to receive the Micro Degree badge.",
 		"chooseMin2Badges": "Choose at least 2 badges",
 		"studentsMustEarn": "Students <span class='tw-font-bold'>must earn {{ count_required }} of the {{count_total}} badges </span> to receive the Micro Degree badge.",
-		"condition": "You <span class='tw-font-bold'>must earn {{ count_required }} of the {{count_total}} badges</span> to receive the Micro Degree."
+		"condition": "You <span class='tw-font-bold'>must earn {{ count_required }} of the {{count_total}} badges</span> to receive the Micro Degree.",
+		"learningPathWithMicroDegree": "Learning path with Micro Degree Badge"
 	},
 	"LearningPathEditor": {
-		"shortDescription": "Summarized description of your Micro Degree. This short description will be saved in the Micro Degree."
+		"shortDescription": "Summary description of the learning program. This short description will be saved in the Micro Degree completion badge."
 	},
 	"OEBComponents": {
 		"fieldIsRequired": "This field is required"
