--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -260,7 +260,7 @@
 		"myLearningPathText": "Lernpfade werden im Zuge des Badge-Typs Micro Degree angelegt.",
 		"myInstitutionsNoBadge": "hat noch keine Badges, die sie vergeben kann.",
 		"myInstitutionsCreateBadge": "Neuen Badge erstellen",
-		"myInstitutionsCreateLearningPath": "Micro Degree erstellen",
+		"myInstitutionsCreateLearningPath": "Lernpfad erstellen",
 		"giveMyBadges": "Meine Badges vergeben",
 		"askForPlugin": "Plugin anfragen",
 		"askForPluginText": "Unser <span class='tw-font-bold'>Plugin</span> bietet dir die Möglichkeit, Badges aus deiner eigenen digitalen Lehrumgebung heraus zu vergeben.",
@@ -324,9 +324,9 @@
 		"responsible": "...die Verantwortung für die Qualität der Kursangebote, der erstellten und vergebenen Badges sowie für die zugeordneten Kompetenzen trage.",
 		"noMisuse": "...die Plattform nur für die vorgesehenen Zwecke nutze und jeglichen Missbrauch ablehne.",
 		"institutionsHeadline": "Alle Institutionen in der Übersicht",
-		"learningPathCreateHeadline": "Micro Degree erstellen",
-		"learningPathEditHeadline": "Micro Degree bearbeiten",
-		"lpSubHeading": "Ein Micro Degree verbindet mehrere Badges zu einer größeren Lerneinheit.",
+		"learningPathCreateHeadline": "Lernpfad mit Abschluss Micro Degree",
+		"learningPathEditHeadline": "Lernpfad bearbeiten",
+		"lpSubHeading": "Ein Lernpfad verbindet mehrere Badges zu einer größeren Lerneinheit.",
 		"loadingAllBadges": "Lade Badges...",
 		"loadAllBadges": "Alle Badges laden",
 		"waitWhileBadgesAreIssued": "Badges werden vergeben, bitte warten...",
@@ -574,7 +574,7 @@
 		"addTags": "Tags hinzufügen",
 		"newTag": "Einen Tag eingeben...",
 		"tagDoesNotExist": "Dieser Tag existiert noch nicht",
-		"tagInfo": "Tags verschlagworten Badges und helfen Lernenden auf OEB bei der Suche von Badges zu bestimmten Themen.",
+		"tagInfo": "Tags verschlagworten {{items}} und helfen Lernenden auf OEB bei der Suche von {{items}} zu bestimmten Themen.",
 		"removeAlignment": "Verknpüfung entfernen",
 		"removeAlignmentInfo": "Bist du sicher, dass du die Verknpüfung(en) entfernen möchtest? ",
 		"irreversibleAction": "Diese Aktion kann nicht rückgängig gemacht werden.",
@@ -1018,6 +1018,7 @@
 	},
 	"LearningPath": {
 		"learningpaths": "Micro Degrees",
+		"learningpathsPlural": "Lernpfade",
 		"learningpathsNav": "Micro Degrees A-Z",
 		"catalogHeadline": "Alle Micro Degrees in der Übersicht",
 		"participate": "Teilnehmen",
@@ -1035,7 +1036,6 @@
 		"getYourPath": "Hol dir deinen Micro Degree-Badge ab",
 		"continue": "Weiterlernen",
 		"finished": "Abgeschlossen",
-		"enterDetails": "Micro Degree-Details eingeben",
 		"includedBadges": "Enthaltene Badges",
 		"badgeTabs": {
 			"all": "Alle",
@@ -1044,13 +1044,13 @@
 		},
 		"chooseBadges": "Enthaltene Badges wählen",
 		"badgeSequenceStep": "Badge-Reihenfolge",
-		"badgeSequence": "Reihenfolge der Badges im Micro Degree",
+		"badgeSequence": "Reihenfolge der Badges im Lernpfad",
 		"combineBadgeCategories": "Du kannst Kompetenz-Badges und Teilnahme-Badges kombinieren.",
-		"min2Badges": "Der Micro Degree muss mindestens 2 Badges enthalten.",
+		"min2Badges": "Der Lernpfad muss mindestens 2 Badges enthalten.",
 		"chooseBadgesInfo": "Verwende am besten nur Badges deiner eigenen Institution, da der Micro Degree inaktiv wird, falls einer der enthaltenen Badges gelöscht werden sollte. Du musst dann einen Ersatz finden, um den Micro Degree wieder zu aktivieren.",
 		"youHave": "Du hast",
 		"choosenForLp": "für den Micro Degree ausgewählt.",
-		"dragDropInfo": "Mittels <span class='tw-font-bold'>Drag & Drop</span> kannst du deine ausgewählten Badges hier in die Reihenfolge bringen, in der sie innerhalb des Micro Degrees angezeigt werden sollen.",
+		"dragDropInfo": "Mittels <span class='tw-font-bold'>Drag & Drop</span> kannst du deine ausgewählten Badges hier in die Reihenfolge bringen, in der sie innerhalb des Lernpfads angezeigt werden sollen.",
 		"lpParticipationBadge": "Micro Degree",
 		"lpParticipationBadgeInfo": "Lernende können den Micro Degree-Badge bei dir anfordern, sobald sie alle im Micro Degree enthaltenen Badges erworben haben. <span class='tw-font-bold'>Du erhältst die Anfragen per E-Mail </span>.",
 		"lpDerivedData": "Folgende Daten haben wir für den Micro Degree übernommen:",
@@ -1063,12 +1063,11 @@
 		"selectedBadges": "Du hast {{ count }} Badges für den Micro Degree ausgewählt",
 		"selectedBadgesOne": "Du hast 1 Badge für den Micro Degree ausgewählt",
 		"deleteWarning": "Möchtest du diesen Micro Degree wirklich löschen?",
-		"mdImage": "Micro-Degree Bild",
-		"lastBadgeInfo": "Den Abschluss-Badge <strong class='tw-text-purple'>Micro Degree</strong> erhalten Lernende automatisiert per E-Mail, sobald sie alle darin enthaltenen Badges erworben haben.",
-		"activateMd": "Micro Degree freischalten",
-		"activationInfo": "Wenn du den Micro Degree zur Nutzung freischaltest, <span class='tw-font-bold'>kannst du ihn danach nicht mehr bearbeiten</span>. ",
-		"activationInfo2": "Zeitgleich erhalten Lernende, die bereits im Besitz der im Lernpfad enthaltenen Badges sind, automatisch den Micro Degree.",
-		"activateMdForUse": "<span class='tw-font-bold tw-text-white tw-text-lg'>Micro Degree zur Nutzung freischalten</span>",
+		"lastBadgeInfo": "Den Abschluss-Badge <strong class='tw-text-purple'>Micro Degree</strong> erhalten Lernende automatisiert per E-Mail, sobald sie alle im Lernpfad enthaltenen Badges erworben haben.",
+		"activateMd": "Lernpfad freischalten",
+		"activationInfo": "Wenn du den Lernpfad zur Nutzung freischaltest, <span class='tw-font-bold'>kannst du ihn danach nicht mehr bearbeiten</span>. ",
+		"activationInfo2": "Zeitgleich erhalten Lernende, die bereits im Besitz der im Lernpfad enthaltenen Badges sind, automatisch den Abschluss-Badge Micro Degree.",
+		"activateMdForUse": "<span class='tw-font-bold tw-text-white tw-text-lg'>Lernpfad zur Nutzung freischalten</span>",
 		"notActivatedYetStart": "Der Lernpfad ist noch nicht zur Nutzung",
 		"notActivatedYetLink": "freigeschaltet",
 		"notActivatedYetEnd": ".",
@@ -1082,10 +1081,11 @@
 		"learnersHaveTo2": "der oben ausgewählten Badges erwerben, um den Abschluss-Badge Micro Degree zu erhalten.",
 		"chooseMin2Badges": "Wähle mindestens 2 Badges aus",
 		"studentsMustEarn": "Lernende müssen <span class='tw-font-bold'>{{ count_required }} der {{count_total}} Badges erwerben</span>, um den Abschluss-Badge Micro Degree zu erhalten.",
-		"condition": "Du musst <span class='tw-font-bold'>{{ count_required }} der {{count_total}} Badges erwerben</span>, um den Micro Degree zu erhalten."
+		"condition": "Du musst <span class='tw-font-bold'>{{ count_required }} der {{count_total}} Badges erwerben</span>, um den Micro Degree zu erhalten.",
+		"learningPathWithMicroDegree": "Lernpfad mit Abschluss-Badge Micro Degree"
 	},
 	"LearningPathEditor": {
-		"shortDescription": "Zusammenfassende Beschreibung deines Micro Degrees. Diese Kurzbeschreibung wird im Micro Degree gespeichert."
+		"shortDescription": "Zusammenfassende Beschreibung des Lernangebots. Diese Kurz-Beschreibung wird im Abschluss-Badge Micro Degree gespeichert."
 	},
 	"OEBComponents": {
 		"fieldIsRequired": "Dieses Feld ist erforderlich"
