fix: more wordings

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -65,9 +65,9 @@
 		"page": "Seite",
 		"next": "Weiter",
 		"previous": "Zurück",
-		"learningPath": "Micro Degree",
-		"learningPaths": "Micro Degrees",
-		"noLearningPaths": "Keine Micro Degrees",
+		"learningPath": "Lernpfad",
+		"learningPaths": "Lernpfade",
+		"noLearningPaths": "Keine Lernpfade",
 		"ascending": "Aufsteigend",
 		"descending": "Absteigend",
 		"dateAscending": "Älteste zuerst",
@@ -1073,7 +1073,7 @@
 		"notActivatedYetEnd": ".",
 		"finishedOn": "Abgeschlossen am",
 		"mdUsers": "Micro Degree-Nutzende",
-		"searchMds": "Micro Degrees durchsuchen",
+		"searchMds": "Lernpfade durchsuchen",
 		"saving": "Speichere",
 		"flexibleSelection": "Auswahl für flexiblen Lernpfad",
 		"flexibleSelectionInfo": "Lege hier fest, wieviele der ausgewählten Badges erworben werden müssen, damit die lernende Person den Abschluss Micro Degree erhält:",
