--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -64,9 +64,9 @@
 		"page": "Page",
 		"next": "Next",
 		"previous": "Previous",
-		"learningPath": "Micro Degree",
-		"learningPaths": "Micro Degrees",
-		"noLearningPaths": "No Micro Degrees",
+		"learningPath": "learning path",
+		"learningPaths": "learning paths",
+		"noLearningPaths": "No learning paths",
 		"ascending": "Ascending",
 		"descending": "Descending",
 		"dateAscending": "Oldest first",
@@ -1071,7 +1071,7 @@
 		"notActivatedYetEnd": " for use.",
 		"finishedOn": "Finished on",
 		"mdUsers": "Micro Degree users",
-		"searchMds": "search micro degrees",
+		"searchMds": "search learning paths",
 		"saving": "Saving",
 		"flexibleSelection": "Selection for flexible learning path",
 		"flexibleSelectionInfo": "Specify here how many of the selected badges must be earned in order for the learner to receive the Micro Degree:",
