fix: align button

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -435,7 +435,7 @@
 		"multiBadges": "badges",
 		"noRecipients": "No recipient",
 		"oneRecipient": "1 recipient",
-		"multiRecipients": "recipients",
+		"multiRecipients": "Recipients",
 		"participation": "Participation",
 		"competency": "Competency",
 		"learningpath": "Micro Degree",
