fix: wrong translation

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -225,7 +225,7 @@
 		"enterValidEmail": "Bitte gib eine gültige E-Mail Adresse an",
 		"enterDescription": "Bitte gib eine Beschreibung an",
 		"enterCategory": "Bitte gib eine Kategorie an",
-		"enterStreet": "Bitte gib eine addMember_staffStrasse an",
+		"enterStreet": "Bitte gib eine Strasse an",
 		"enterHouseNo": "Bitte gib eine Hausnummer an",
 		"enterPostalCode": "Bitte gib eine Postleitzahl an",
 		"enterCity": "Bitte gib eine Stadt an",
