fix: correct translation string

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -687,7 +687,7 @@
 		"changePassword": "Passwort ändern",
 		"newPassword": "Neues Passwort",
 		"areYouNew": "Du bist neu hier?",
-		"yourEmail": "Deine E-Mail Adresse",
+		"yourEmail": "Deine E-Mail-Adresse",
 		"yourPassword": "Dein Passwort"
 	},
 	"Legend": {
