--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -375,7 +375,9 @@
 		"partOfNetwork": "Teil vom Netzwerk",
 		"contract26": "Mit einem Klick auf „Institution erstellen“ wird die <a class='tw-underline tw-text-link' target='_blank' href='https://oeb-cms.mycelia.education/wp-content/uploads/2025/09/Vereinbarung-ueber-die-gemeinsame-Verantwortlichkeit-GVV_Institution_082025.pdf'>hier abrufbare</a> Vereinbarung gemäß Artikel 26 Abs. 1 DSGVO über die gemeinsame datenschutzrechtliche Verantwortung der Institution mit den Verbundpartnerinnen wirksam.",
 		"linkedInId": "<span class=\"tw-italic tw-font-normal\">Optional: </span> LinkedIn-ID",
-		"linkedInIdUse": "Für die Badge-Darstellung auf LinkedIn",
+		"linkedInIdUse1": "Für die ",
+		"linkedInIdUseLink": "Badge-Darstellung",
+		"linkedInIdUse2": " auf LinkedIn",
 		"linkedInIdHint": "Die LinkedIn-ID ist die Zahlenfolge in der URL deiner Institutions-Seite, etwa: www.linkedin.com/company/<b>12345678</b>/admin -> ID <b>12345678</b>"
 	},
 	"Network": {
