--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -374,7 +374,9 @@
 		"partOfNetwork": "Part of the network",
 		"contract26": "By clicking on “Create institution,” the agreement <a class='tw-underline tw-text-link' target='_blank' href='https://oeb-cms.mycelia.education/wp-content/uploads/2025/09/EN-Vereinbarung-ueber-die-gemeinsame-Verantwortlichkeit-GVV_Institution_082025.pdf'>available here</a> pursuant to Article 26(1) GDPR on the joint data protection responsibility of the institution with its partners becomes effective.",
 		"linkedInId": "<span class=\"tw-italic tw-font-normal\">Optional: </span> LinkedIn-ID",
-		"linkedInIdUse": "For badge display on LinkedIn",
+		"linkedInIdUse1": "For ",
+		"linkedInIdUseLink": "badge display",
+		"linkedInIdUse2": " on LinkedIn",
 		"linkedInIdHint": "The LinkedIn ID is the sequence of numbers in the URL of your institution's page, for example: www.linkedin.com/company/<b>12345678</b>/admin -> ID <b>12345678</b>"
 	},
 	"Network": {
