--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -265,20 +265,20 @@
 		"betaPhase": "Unsere Plattform befindet sich noch in der Betaphase. <b>Du hast Fehler entdeckt? Schreib uns gerne an <a class='tw-text-link tw-underline' href='mailto:support@openbadges.education'>support@openbadges.education</a></b>.",
 		"askForLearningPath": "Wir helfen dir, einen Micro Degree anzulegen. Schreibe an <a href='mailto:lernpfad@openbadges.education' class='tw-underline tw-text-[#1400FF]'>lernpfad@openbadges.education</a>.",
 		"award": "vergeben",
-		"badgePreview": "Vorschau Badge",
-		"certPreview": "Vorschau PDF-Zertifikat",
+		"badgePreview": "Vorschau: Badge",
+		"certPreview": "Vorschau: PDF-Zertifikat",
 		"batchAwardText1": "Vergebe den Badge an eine lernende Person oder",
 		"batchAwardTextLink": "klicke hier, um den Badge an mehrere Lernende gleichzeitig",
 		"batchAwardText2": "zu vergeben",
 		"batchAwardFailed": "Badge-Massenvergabe fehlgeschlagen",
 		"failedBatchMonitoring": "Fortschitt der Vergabe konnte nicht ermittelt werden",
-		"awardedPerson": "Name der Empfänger:in",
+		"awardedPerson": "Name Empfänger:in",
 		"sendEmail": "Empfänger:in mit E-Mail benachrichtigen",
 		"giveBadge": "Badge vergeben",
 		"giveBadges": "Badges vergeben",
 		"badgeAwardInProgress": "Vergebe Badge",
 		"giveQr": "QR-Code-Vergabe erstellen",
-		"nameWarning": "Beachte: Der Name wird als Klartext im Badge gespeichert.",
+		"infoNamePlainText": "Der Name wird als Klartext im Badge gespeichert und erscheint auf dem PDF-Zertifikat.",
 		"multipleBadgeAwardHeadline": "Badge an mehrere Lernende gleichzeitig vergeben",
 		"uploadListText": "Du kannst eine <span class='tw-font-bold'>Liste von Empfänger:innen importieren</span>, die den Badge gleichzeitig erhalten sollen. So geht's:",
 		"downloadExampleCSV": "Lade unsere Datei-Vorlage herunter:",
@@ -369,7 +369,16 @@
 		"clickOnAwardBadges": "Klicke auf \"Badges vergeben\", um die Badges jetzt an deine Lernenden zu vergeben.",
 		"creatingBadge": "Erstelle Badge",
 		"memberView": "Mitglieds-Ansicht",
-		"partOfNetwork": "Teil vom Netzwerk"
+		"partOfNetwork": "Teil vom Netzwerk",
+		"issueByEmail": "per E-Mail vergeben",
+		"recipientEmail": "E-Mail-Adresse Empfänger:in",
+		"emailIsIdentifier": "Die E-Mail dient als Identifier für den Badge. Hierhin wird der Badge gesendet.",
+		"receivesBadgeByEmail": "Der/die Empfänger:in erhält den Badge per E-Mail.",
+		"issuerBadges": "Institutions-Badges",
+		"networkBadges": "Netzwerk-Badges",
+		"yourIssuersAreInNetworks": "Institutionen von dir sind Teil folgender Netzwerke:",
+		"awardedNetworkBadges": "Diese Badges hat {{issuer}} über das jeweilige Netzwerk vergeben:",
+		"badgesApprovedForNetworks": " Diese Badges hat {{ issuer }} für die Nutzung im jeweiligen Netzwerk freigegeben:"
 	},
 	"Network": {
 		"networksNav": "Netzwerke A-Z",
@@ -415,7 +424,10 @@
 		"alreadyConfirmed": "Ein anderes Mitglied von <span class='tw-italic'> {{issuerName}} hat die Netzwerk-Einladung von <span class='tw-font-bold'> {{networkName}}</span> bereits bestätigt.",
 		"view": "Netzwerk ansehen",
 		"createBadge": "Netzwerk-Badge erstellen",
-		"awardBadgeIssuer": "Über welche deiner <span class='tw-font-bold'>Institutionen</span> soll der Badge vergeben werden?"
+		"awardBadgeIssuer": "Über welche deiner <span class='tw-font-bold'>Institutionen</span> soll der Badge vergeben werden?",
+		"networkBadges": "Netzwerk-Badges",
+		"noPartnerBadgesYet": "Bisher hat keine Partner-Institution einen Badge für das Netzwerk freigegeben.",
+		"createdByNetwork": "Erstellt vom NETZWERK"
 	},
 	"Badge": {
 		"groupBy": "Gruppieren nach",
