--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -116,7 +116,8 @@
 		"overview": "Overview",
 		"rolesAndRights": "Roles and rights",
 		"website": "Website",
-		"organization": "Organization"
+		"organization": "Organization",
+		"notNow": "Not Now"
 	},
 	"NavItems": {
 		"register": "Register",
@@ -379,7 +380,11 @@
 		"linkedInIdUse2": " on LinkedIn",
 		"linkedInIdHint": "The LinkedIn ID is the sequence of numbers in the URL of your institution's page, for example: www.linkedin.com/company/<b>12345678</b>/admin -> ID <b>12345678</b>",
 		"linkedInUseNoteHeader": "LinkedIn ID of your institution",
-		"linkedInUseNoteText": "Learners can add badges they have earned to their LinkedIn profile. In order for the certificate to appear there with your institution's logo image, we need to store your institution's LinkedIn ID."
+		"linkedInUseNoteText": "Learners can add badges they have earned to their LinkedIn profile. In order for the certificate to appear there with your institution's logo image, we need to store your institution's LinkedIn ID.",
+		"addLinkedInId": "Add LinkedIn ID",
+		"findLinkedInId": "How to find your LinkedIn ID:",
+		"findLinkedInIdText": "Go to your institution's page on LinkedIn. The ID is the sequence of numbers in the corresponding URL. For example, the URL is: www.linkedin.com/company/12345678/admin. → ID = 12345678.",
+		"findLinkedInIdNote": "You can add the LinkedIn ID at any time on your institution's page by editing the institution details."
 	},
 	"Network": {
 		"networksNav": "Networks A-Z",
