fix: style issues (#1631)
* fix: introduce + use oeb-header-text component for default header style

* feat: add templating capabilities to header text component

* fix: use oeb-header-text in md catalog

* refactor: remove plural from md

* feat: break words properly and use in network catalog

* feat: handle line breaks properly

* fix: correct translation string

* fix: increase padding of text for oeb-checkbox

* fix: always top align the checkboxes

* fix: format section properly

* fix: add InMemoryScrollingOptions to router for scroll pos restoration

* fix: adjust padding and margin of header text

* fix: green color in profile table

* feat: add ability to use min value for inputs

* fix: sizing of tabs triggers

* fix: correct format of checkbox label padding

* fix(footer): mobile layout fixes

* fix: mobile layout of sidebar

---------

Co-authored-by: Stefan Trautvetter <stefan.trautvetter@esirion.de>

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -265,7 +265,7 @@
 		"giveMyBadges": "Meine Badges vergeben",
 		"askForPlugin": "Plugin anfragen",
 		"askForPluginText": "Unser <span class='tw-font-bold'>Plugin</span> bietet dir die Möglichkeit, Badges aus deiner eigenen digitalen Lehrumgebung heraus zu vergeben.",
-		"betaPhase": "Unsere Plattform befindet sich noch in der Betaphase. <b>Du hast Fehler entdeckt? Schreib uns gerne an <a class='tw-text-link tw-underline' href='mailto:support@openbadges.education'>support@openbadges.education</a></b>.",
+		"betaPhase": "Unsere Plattform befindet sich noch in der Betaphase. <b>Du hast Fehler entdeckt? Schreib uns gerne an <a class='tw-text-link tw-underline oeb-break-words' href='mailto:support@openbadges.education'>support@openbadges.education</a></b>.",
 		"askForLearningPath": "Wir helfen dir, einen Micro Degree anzulegen. Schreibe an <a href='mailto:lernpfad@openbadges.education' class='tw-underline tw-text-[#1400FF]'>lernpfad@openbadges.education</a>.",
 		"award": "vergeben",
 		"badgePreview": "Vorschau Badge",
@@ -687,7 +687,7 @@
 		"changePassword": "Passwort ändern",
 		"newPassword": "Neues Passwort",
 		"areYouNew": "Du bist neu hier?",
-		"yourEmail": "Deine E-Mail Adresse",
+		"yourEmail": "Deine E-Mail-Adresse",
 		"yourPassword": "Dein Passwort"
 	},
 	"Legend": {
