--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -421,7 +421,7 @@
 			"staff": "Member"
 		},
 		"confirmNetworkInvitation": "Confirm the <span class='tw-font-bold'>network invitation from {{networkName}}</span> for your institution <span class='tw-italic'>{{issuerName}}</span> by clicking the button:",
-		"partnerSince": "Partner since",
+		"partnerSince": "Network Partner since",
 		"partner": "Network Members",
 		"alreadyConfirmed": "Another member of <span class='tw-italic'> {{issuerName}} has already accepted the network invitation from <span class='tw-font-bold'> {{networkName}}</span>.",
 		"view": "View network",
@@ -429,7 +429,8 @@
 		"awardBadgeIssuer": "Which of your <span class='tw-font-bold'>institutions</span> should the badge be awarded to?",
 		"networkBadges": "Network badges",
 		"noPartnerBadgesYet": "So far, no partner institution has released a badge for the network.",
-		"createdByNetwork": "Created by NETWORK"
+		"createdByNetwork": "Created by NETWORK",
+		"noBadgesYet": "The network <span class='tw-font-semibold'>{{network}}</span> has not created any badges yet."
 	},
 	"Badge": {
 		"groupBy": "Group by",
