--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -357,7 +357,6 @@
 		"staffEditorRights": "Rechte zum Erstellen, Vergeben und Löschen von Badges inkl. Micro Degrees.",
 		"staffMemberRights": "Kann die von Eigentümer:innen und/oder Editor:innen erstellten Badges vergeben (inkl. QR-Code-Vergaben erstellen, bearbeiten und löschen).",
 		"imageFormat": "(Format 1:1 / quadratisch, Datei-Formate: PNG oder SVG)",
-		"imageFormat": "(Format 1:1 / quadratisch, Datei-Formate: PNG oder SVG)",
 		"nameOfIssuer": "Name der Institution",
 		"websiteUrl": "Webseiten-URL",
 		"schoolLabel": "Schule (Grundschulen, weiterführende Schulen, Berufsschulen, Institutionen formaler schulischer Bildung)",
@@ -383,7 +382,8 @@
 		"networkBadges": "Netzwerk-Badges",
 		"yourIssuersAreInNetworks": "Institutionen von dir sind Teil folgender Netzwerke:",
 		"awardedNetworkBadges": "Diese Badges hat {{issuer}} über das jeweilige Netzwerk vergeben:",
-		"badgesApprovedForNetworks": " Diese Badges hat {{ issuer }} für die Nutzung im jeweiligen Netzwerk freigegeben:"
+		"badgesApprovedForNetworks": " Diese Badges hat {{ issuer }} für die Nutzung im jeweiligen Netzwerk freigegeben:",
+		"badgeAwards": "Badge-Vergaben"
 	},
 	"Network": {
 		"networksNav": "Netzwerke A-Z",
